# internal/model/recipe.go
@@ -1,11 +1,12 @@
 package model
 
 type AllRecipeResp struct {
-	Id          int    `json:"id" db:"id"`
-	Name        string `json:"name" db:"name"`
-	Description string `json:"description" db:"description"`
-	Author      int    `json:"author" db:"author"`
-	Duration    int64  `json:"duration" db:"duration"`
+	Id          int     `json:"id" db:"id"`
+	Name        string  `json:"name" db:"name"`
+	Description string  `json:"description" db:"description"`
+	Author      int     `json:"author" db:"author"`
+	Duration    int64   `json:"duration" db:"duration"`
+	AvgRating   float32 `json:"avg_rating" db:"avg_rating"`
 }
 
 type RecipeResp struct {
@@ -14,6 +15,7 @@ type RecipeResp struct {
 	Description string       `json:"description" db:"description"`
 	Author      int          `json:"author" db:"author"`
 	Duration    int64        `json:"duration" db:"duration"`
+	AvgRating   float32      `json:"avg_rating" db:"avg_rating"`
 	Ingredients []Ingredient `json:"ingredients"`
 	Steps       []Step       `json:"steps"`
 }
@@ -31,8 +33,10 @@ type UpdateRecipeReq struct {
 }
 
 type GetAllRecipesReq struct {
-	IngredientFilter []int   `json:"ingredient_filter" example:"1"`
-	DurationFilter   *int64  `json:"duration_filter" example:"7200"`
-	DurationSort     *string `json:"duration_sort" example:"DESC"`
-	Author           *int    `json:"author" example:"1"`
+	IngredientFilter []int    `json:"ingredient_filter" example:"1"`
+	DurationFilter   *int64   `json:"duration_filter" example:"7200"`
+	RatingFilter     *float32 `json:"rating_filter" example:"4.5"`
+	DurationSort     *string  `json:"duration_sort" example:"DESC"`
+	RatingSort       *string  `json:"rating_sort" example:"ASC"`
+	Author           *int     `json:"author" example:"1"`
 }
